[package]
name = "lotsa-example"
version = "0.1.0"
authors = ["David Simon <david.mike.simon@gmail.com>"]
edition = "2018"
description = "Distributed grid simulation thingie"
license = "MIT"
repository = "https://github.com/DavidMikeSimon/lotsa"
keywords = ["distributed", "grid", "cellular"]
categories = ["game-engines", "simulation"]
readme = "README.md"

[features]
server = ["lotsa-server"]
client = ["lotsa-client"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "client.rs"

[[bin]]
name = "server"
path = "server.rs"
required-features = ["server"]

[dependencies]
lotsa-server = { path = "../lotsa-server", optional = true }
lotsa-client = { path = "../lotsa-client", optional = true }
