[package]
name = "lotsa-game-template" # TODO: Use {{project-name}} here somehow without breaking test runs?
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"
readme = "README.md"

[features]
server = ["lotsa-server"]
client = ["lotsa-client"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "client.rs"

[[bin]]
name = "server"
path = "server.rs"
required-features = ["server"]

[dependencies]
lotsa-server = { path = "../lotsa-server", optional = true }
lotsa-client = { path = "../lotsa-client", optional = true }
