[package]
name = "lotsa-game-template" # TODO: Use {{project-name}} here somehow without breaking test runs?
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"
readme = "README.md"

[features]
serverside = ["lotsa/server"]
clientside = ["lotsa/client"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "client.rs"

[[bin]]
name = "server"
path = "server.rs"
required-features = ["serverside"]

[dependencies]
lotsa = { path = "../lotsa" }
