[package]
name = "lotsa-server"
version = "0.1.0"
authors = ["David Simon <david.mike.simon@gmail.com>"]
edition = "2018"
description = "Distributed grid simulation thingie"
license = "MIT"
repository = "https://github.com/DavidMikeSimon/lotsa"
keywords = ["distributed", "grid", "cellular"]
categories = ["game-engines", "simulation"]
readme = "README.md"

[dependencies]
lotsa = { path = "../lotsa" }

[[bin]]
name = "lotsa_server"
path = "src/main.rs"
