[package]
name = "lotsa-wasm"
version = "0.1.0"
authors = ["David Simon <david.mike.simon@gmail.com>"]
edition = "2018"
description = "Distributed grid simulation thingie"
license = "MIT"
repository = "https://github.com/DavidMikeSimon/lotsa"
keywords = ["distributed", "grid", "cellular"]
categories = ["game-engines", "simulation"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lotsa = { path = "../lotsa" }
bincode = "1.1"
console_error_panic_hook = "0.1.1"
console_log = "0.1"
flate2 = "1.0"
js-sys = "0.3"
log = "0.4"
maplit = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [ "console", "BinaryType", "MessageEvent", "WebSocket" ] }
wee_alloc = "0.4.2"

[dev-dependencies]
wasm-bindgen-test = "0.2"
