[package]
name = "lotsa"
version = "0.1.0"
authors = ["David Simon <david.mike.simon@gmail.com>"]
edition = "2018"
description = "Distributed grid simulation thingie"
license = "MIT"
repository = "https://github.com/DavidMikeSimon/lotsa"
keywords = ["distributed", "grid", "cellular"]
categories = ["game-engines", "simulation"]
readme = "README.md"

[features]
server = [
  "actix",
  "actix-web",
  "actix-web-actors",
  "actix-files",
  "futures",
  "pretty_env_logger",
  "tokio-io"
]
client = [
  "console_error_panic_hook",
  "console_log",
  "js-sys",
  "wasm-bindgen",
  "web-sys",
  "wee_alloc"
]

[dependencies]
maplit = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.1"
bincode = "1.1"
flate2 = "1.0"
log = "0.4"

# Server-side dependenceis
actix = { version = "0.8", optional = true }
actix-web = { version = "1.0", optional = true }
actix-web-actors = { version = "1.0", optional = true }
actix-files = { version = "0.1", optional = true }
futures = { version = "0.1", optional = true }
pretty_env_logger = { version = "0.3", optional = true }
tokio-io = { version = "0.1", optional = true }

# Client-side dependencies
console_error_panic_hook = { version = "0.1.1", optional = true }
console_log = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "BinaryType",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "MessageEvent",
  "Url",
  "WebSocket",
  "Window",
  "console",
]

[lib]
name = "lotsa"
path = "src/lib.rs"
